# rendy

chain/: Cargo.toml
command/: Cargo.toml
descriptor/: Cargo.toml
descriptor/src/: allocator.rs
factory/: Cargo.toml
factory/src/: factory.rs
frame/: Cargo.toml
graph/: Cargo.toml
graph/src/node/: present.rs
graph/src/node/render/group/: simple.rs
memory/: Cargo.toml
mesh/: Cargo.toml
mesh/src/: vertex.rs
rendy/: Cargo.toml
rendy/examples/meshes/: main.rs
rendy/examples/quads/: main.rs
rendy/examples/sprite/: main.rs
rendy/examples/triangle/: main.rs
resource/: Cargo.toml
shader/: Cargo.toml
texture/: Cargo.toml
texture/src/: texture.rs
util/: Cargo.toml
wsi/: Cargo.toml
wsi/src/: lib.rs
