[package]
name = "rendy-util"
version = "0.1.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/omni-viral/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-util"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's utilities"

[features]
empty = ["gfx-backend-empty"]
dx12 = ["gfx-backend-dx12"]
metal = ["gfx-backend-metal"]
vulkan = ["gfx-backend-vulkan"]
no-slow-safety-checks = []

[dependencies]
log = "0.4"
gfx-hal = { git = "https://github.com/gfx-rs/gfx.git" }
gfx-backend-empty = { git = "https://github.com/gfx-rs/gfx.git", optional = true }
gfx-backend-dx12  = { git = "https://github.com/gfx-rs/gfx.git", optional = true }
gfx-backend-metal = { git = "https://github.com/gfx-rs/gfx.git", optional = true }
gfx-backend-vulkan = { git = "https://github.com/gfx-rs/gfx.git", optional = true }
