[package]
name = "rendy-wsi"
version = "0.1.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/omni-viral/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-wsi"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's windowing support"

[features]
empty = ["gfx-backend-empty", "rendy-util/empty"]
dx12 = ["gfx-backend-dx12", "rendy-util/dx12"]
metal = ["gfx-backend-metal", "rendy-util/metal"]
vulkan = ["gfx-backend-vulkan", "rendy-util/vulkan"]
no-slow-safety-checks = ["rendy-util/no-slow-safety-checks"]

[dependencies]
rendy-memory = { version = "0.1.0", path = "../memory" }
rendy-resource = { version = "0.1.0", path = "../resource" }
rendy-util = { version = "0.1.0", path = "../util" }

gfx-hal = { git = "https://github.com/gfx-rs/gfx.git" }
gfx-backend-empty = { git = "https://github.com/gfx-rs/gfx.git", optional = true }
gfx-backend-dx12  = { git = "https://github.com/gfx-rs/gfx.git", optional = true }
gfx-backend-metal = { git = "https://github.com/gfx-rs/gfx.git", optional = true }
gfx-backend-vulkan = { git = "https://github.com/gfx-rs/gfx.git", optional = true }

derivative = "1.0"
failure = "0.1"
log = "0.4"
relevant = { version = "0.4", features = ["log", "backtrace"] }
smallvec = "0.6"
winit = "0.18"
